--- a/style.css
+++ b/style.css
@@ -41,3 +41,23 @@
             gap:20px;
             margin-top:20px;
           }
+          .iklan {
+    width: 32rem;
+    border-radius: 15px;
+    overflow:hidden;
+} 
+.iklan img {
+    width: 100%;
+    height: 200px;
+    display:block;
+}
+.category {
+    width: 5rem;
+    border-radius: 100%;
+    overflow:hidden;
+} 
+.category img {
+    width: 100%;
+    height: 200px;
+    display:block;
+}
